# Self-Reflective-RAG-Model-for-Autonomous-Information-Retrieval-

./: .gitignore  LICENSE  RAG_Interview_Handbook.docx  README.md  app.py  benchmark.py  config.py  evaluate.py  ingest.py  main.py  pyproject.toml  requirements.txt
data/eval/: questions.json
pages/: 1_Retrieval_Debug_Dashboard.py  2_Evaluation_Dashboard.py
results/: chunk_size_benchmark.csv  evaluation_results.csv  evaluation_summary.json
src/evaluation/: dataset_loader.py  evaluator.py  metrics.py
src/indexing/: vectorstore.py
src/ingestion/: chunking.py  hashing.py  manifest.py  pdf_loader.py
src/retrieval/: base.py  bm25.py  hybrid.py  reranker.py  retriever.py  semantic.py
src/utils/: logging_config.py  metadata.py
src/workflow/: citations.py  graph.py  nodes.py  prompts.py  query_cleaning.py  state.py
tests/: test_benchmark.py  test_bm25.py  test_chunking.py  test_citations.py  test_config.py  test_evaluation.py  test_hashing.py  test_hybrid.py  test_manifest.py  test_metadata_sanitization.py  test_query_cleaning.py  test_reranker.py  test_retrieval_diagnostics.py  test_retriever_factory.py  test_vectorstore.py
