[project]
name = "rag-project"
version = "0.6.0"
description = "Self-reflective local RAG pipeline: LangGraph + Ollama + Chroma, with hybrid retrieval, cross-encoder re-ranking, source citations, a retrieval debug dashboard, a deterministic evaluation dashboard, and a chunk/embedding benchmark harness."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    # --- LangChain ecosystem ---
    # langchain / langchain-community are exact-pinned: they're released in
    # lockstep and mismatched patch lines are a common source of subtle
    # breakage. The others float within their compatible 0.x minor line.
    "langchain==0.3.9",
    "langchain-core>=0.3.21,<0.4",
    "langchain-community==0.3.8",
    "langchain-text-splitters>=0.3.3,<0.4",
    "langchain-huggingface>=0.1.2,<0.2",
    "langchain-ollama>=0.2.0,<0.3",
    "langgraph>=0.2.53,<0.3",

    # --- Vector store ---
    "chromadb>=0.5.20,<0.6",

    # --- Embeddings / re-ranking ---
    "sentence-transformers>=3.3.1,<4",
    "transformers>=4.46,<5",
    "torch>=2.5,<2.6",

    # --- Retrieval / ingestion ---
    "rank_bm25>=0.2.2,<0.3",
    "pymupdf>=1.24,<2",

    # --- Schema validation (grader/router output schemas) ---
    "pydantic>=2.0,<3",

    # --- UI ---
    "streamlit>=1.40,<2",

    # --- Data handling / evaluation / benchmarking ---
    "pandas>=2.0,<3",
    "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.setuptools.packages.find]
include = ["src*"]
